syntax="proto3";
package pms;

option optimize_for = LITE_RUNTIME;

// the type of storeage msg
enum EStorageType{
    TINVALID    = 0;
    TREAD       = 1;
    TWRITE      = 2;
}
