syntax="proto3";

import "common_msg.proto";
import "meet_msg_type.proto";

option java_package = "org.dync.teameeting.sdkmsgclient";
option java_outer_classname = "MeetingMsg";
option optimize_for = LITE_RUNTIME;

message Login{
    string         usr_from  = 1; // user id sending from
    string         usr_token = 2; // user token
    string         usr_nname = 3;
}

message Logout{
    string         usr_from  = 1; // user id sending from
    string         usr_token = 2; // user token
}

message Keep{
    string         usr_from = 1; // user id sending from
}

message MeetMsg{
    EMsgHead       msg_head  = 1; // msg type
    EMsgTag        msg_tag   = 2; // msg tag
    EMsgType       msg_type  = 3; // msg type
    string         usr_from  = 4; // user id sending from
    string         msg_cont  = 5; // msg content
    string         rom_id    = 6; // user room id
    string         rom_name  = 7; // user room name
    string         nck_name  = 8; // user nick name
    string         usr_token = 9; // user token
    sint64         msg_seqs  = 10; // msg sequence number
    sint32         mem_num   = 11; // room member number
    ToUser         usr_toto  = 12; // user ids sending to, the string from pms::ToUser
}
